feat: 앨범/공유/사진 API 명세에 맞게 DTO 및 서비스 정리
- 앨범/공유/사진 컨트롤러와 서비스에서 DTO 메서드명 및 응답 스펙 정리
- 소유/공유/즐겨찾기 필터링 로직을 API 명세에 맞게 통합