@@ -19,7 +19,6 @@ import com.nemo.backend.domain.album.entity.AlbumFavorite;
 import com.nemo.backend.domain.album.repository.AlbumFavoriteRepository;
 import com.nemo.backend.domain.album.repository.AlbumRepository;
 import com.nemo.backend.domain.album.repository.AlbumShareRepository;
-import com.nemo.backend.domain.photo.dto.PhotoResponseDto;
 import com.nemo.backend.domain.photo.entity.Photo;
 import com.nemo.backend.domain.photo.repository.PhotoRepository;
 import com.nemo.backend.domain.photo.service.PhotoStorage;
@@ -37,7 +36,7 @@ public class AlbumService {
     private final AlbumRepository albumRepository;
     private final AlbumShareRepository albumShareRepository;
     private final PhotoRepository photoRepository;
-    private final AlbumFavoriteRepository albumFavoriteRepository; // ✅ 즐겨찾기 리포지토리
+    private final AlbumFavoriteRepository albumFavoriteRepository;
     private final PhotoStorage photoStorage;
 
     private final String publicBaseUrl;
@@ -61,39 +60,64 @@ public class AlbumService {
         this.publicBaseUrl = publicBaseUrl.replaceAll("/+$", "");
     }
 
-    /**
-     * 로그인 사용자의 앨범 목록 조회 (명세: ownership = ALL/OWNED/SHARED)
-     */
+    // 1) 앨범 목록 조회 (ownership + favoriteOnly)
     public List<AlbumSummaryResponse> getAlbums(Long userId, String ownership) {
+        // enum으로 정규화
+        AlbumOwnershipFilter filter = AlbumOwnershipFilter.from(ownership);
+
         // 1) 내가 만든 앨범
-        List<AlbumSummaryResponse> owned = albumRepository.findAll().stream()
-                .filter(a -> a.getUser() != null && userId.equals(a.getUser().getId()))
-                .map(a -> toSummary(a, "OWNER"))
-                .collect(Collectors.toList());
+        List<AlbumSummaryResponse> owned = albumRepository.findByUserId(userId).stream()
+                .map(album -> {
+                    autoSetThumbnailIfMissing(album);
+                    int photoCount = (album.getPhotos() == null) ? 0 : album.getPhotos().size();
+                    return AlbumSummaryResponse.builder()
+                            .albumId(album.getId())
+                            .title(album.getName())
+                            .coverPhotoUrl(album.getCoverPhotoUrl())
+                            .photoCount(photoCount)
+                            .createdAt(album.getCreatedAt())
+                            .role("OWNER")
+                            .build();
+                })
+                .toList();
 
         // 2) 내가 공유받은 앨범 (ACCEPTED + active)
         List<AlbumSummaryResponse> shared = albumShareRepository
                 .findByUserIdAndStatusAndActiveTrue(userId, Status.ACCEPTED).stream()
                 .map(share -> {
-                    Album a = share.getAlbum();
-                    String role = share.getRole().name(); // VIEWER / EDITOR / CO_OWNER
-                    return toSummary(a, role);
+                    Album album = share.getAlbum();
+                    autoSetThumbnailIfMissing(album);
+                    int photoCount = (album.getPhotos() == null) ? 0 : album.getPhotos().size();
+                    return AlbumSummaryResponse.builder()
+                            .albumId(album.getId())
+                            .title(album.getName())
+                            .coverPhotoUrl(album.getCoverPhotoUrl())
+                            .photoCount(photoCount)
+                            .createdAt(album.getCreatedAt())
+                            .role(share.getRole().name()) // VIEWER / EDITOR / CO_OWNER
+                            .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        if ("OWNED".equalsIgnoreCase(ownership)) {
-            return owned;
-        } else if ("SHARED".equalsIgnoreCase(ownership)) {
-            return shared;
-        } else { // ALL (기본값)
-            owned.addAll(shared);
-            return owned;
+        List<AlbumSummaryResponse> base;
+
+        switch (filter) {
+            case OWNED -> base = owned;
+            case SHARED -> base = shared;
+            case ALL -> {
+                owned.addAll(shared);
+                base = owned;
+            }
+            default -> base = owned;
         }
+
+        // 최신 생성순 정렬 (명세에서 sort=createdAt,desc 기본)
+        return base.stream()
+                .sorted(Comparator.comparing(AlbumSummaryResponse::getCreatedAt).reversed())
+                .toList();
     }
 
-    /**
-     * 로그인 사용자의 앨범 목록 조회 + favoriteOnly 필터
-     */
+    // favoriteOnly까지 포함
     public List<AlbumSummaryResponse> getAlbums(Long userId, String ownership, boolean favoriteOnly) {
         List<AlbumSummaryResponse> base = getAlbums(userId, ownership);
 
@@ -101,26 +125,23 @@ public class AlbumService {
             return base;
         }
 
-        // ✅ 내가 즐겨찾기한 앨범 ID 목록
+        // 내가 즐겨찾기한 앨범 ID 목록
         Set<Long> favIds = albumFavoriteRepository.findByUserId(userId).stream()
                 .map(f -> f.getAlbum().getId())
                 .collect(Collectors.toSet());
 
         return base.stream()
                 .filter(a -> favIds.contains(a.getAlbumId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * 특정 앨범 상세 조회 (소유자 + 공유받은 사용자까지)
-     */
+    // 2) 앨범 상세 조회
     public AlbumDetailResponse getAlbum(Long userId, Long albumId) {
-        Album a = albumRepository.findById(albumId)
+        Album album = albumRepository.findById(albumId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND, "ALBUM_NOT_FOUND"));
 
         String role;
-
-        if (a.getUser() != null && userId.equals(a.getUser().getId())) {
+        if (album.getUser() != null && userId.equals(album.getUser().getId())) {
             role = "OWNER";
         } else {
             AlbumShare share = albumShareRepository
@@ -129,29 +150,29 @@ public class AlbumService {
             role = share.getRole().name(); // VIEWER / EDITOR / CO_OWNER
         }
 
-        return toDetail(a, role);
+        autoSetThumbnailIfMissing(album);
+        return toDetail(album, role);
     }
 
-    /**
-     * 앨범 생성
-     */
+    // 3) 앨범 생성
     @Transactional
     public AlbumDetailResponse createAlbum(Long userId, CreateAlbumRequest req) {
         if (req.getTitle() == null || req.getTitle().isBlank()) {
             throw new ApiException(ErrorCode.INVALID_REQUEST, "앨범 이름(title)은 필수입니다.");
         }
 
-        Album a = new Album();
-        a.setName(req.getTitle());
-        a.setDescription(req.getDescription());
+        Album album = new Album();
+        album.setName(req.getTitle());
+        album.setDescription(req.getDescription());
 
         User ownerRef = em.getReference(User.class, userId);
-        a.setUser(ownerRef);
+        album.setUser(ownerRef);
 
-        Album saved = albumRepository.save(a);
+        Album saved = albumRepository.save(album);
 
-        if (req.getPhotoIds() != null && !req.getPhotoIds().isEmpty()) {
-            List<Photo> photos = photoRepository.findAllById(req.getPhotoIds());
+        // 초기 사진 지정
+        if (req.getPhotoIdList() != null && !req.getPhotoIdList().isEmpty()) {
+            List<Photo> photos = photoRepository.findAllById(req.getPhotoIdList());
             for (Photo p : photos) {
                 p.setAlbum(saved);
             }
@@ -161,47 +182,40 @@ public class AlbumService {
 
         autoSetThumbnailIfMissing(saved);
 
-        // 생성 직후에는 항상 OWNER
         return toDetail(saved, "OWNER");
     }
 
-    /**
-     * 앨범에 사진 추가
-     * @return 실제 추가된 사진 수
-     */
+    // 4) 앨범에 사진 추가 / 제거
     @Transactional
     public int addPhotos(Long userId, Long albumId, List<Long> photoIds) {
-        Album a = albumRepository.findById(albumId)
+        Album album = albumRepository.findById(albumId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND, "ALBUM_NOT_FOUND"));
-        if (a.getUser() == null || !userId.equals(a.getUser().getId())) {
-            throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범에 접근할 권한이 없습니다.");
+
+        if (!canManagePhotos(userId, album)) {
+            throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범에 사진을 추가할 권한이 없습니다.");
         }
 
         List<Photo> photos = photoRepository.findAllById(photoIds);
         int count = 0;
         for (Photo p : photos) {
             if (p.getAlbum() == null || !albumId.equals(p.getAlbum().getId())) {
-                p.setAlbum(a);
+                p.setAlbum(album);
                 count++;
             }
         }
         photoRepository.saveAll(photos);
 
-        autoSetThumbnailIfMissing(a);
-
+        autoSetThumbnailIfMissing(album);
         return count;
     }
 
-    /**
-     * 앨범에서 사진 제거
-     * @return 실제 제거된 사진 수
-     */
     @Transactional
     public int removePhotos(Long userId, Long albumId, List<Long> photoIds) {
-        Album a = albumRepository.findById(albumId)
+        Album album = albumRepository.findById(albumId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND, "ALBUM_NOT_FOUND"));
-        if (a.getUser() == null || !userId.equals(a.getUser().getId())) {
-            throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범에 접근할 권한이 없습니다.");
+
+        if (!canManagePhotos(userId, album)) {
+            throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범에서 사진을 삭제할 권한이 없습니다.");
         }
 
         List<Photo> photos = photoRepository.findAllById(photoIds);
@@ -214,53 +228,48 @@ public class AlbumService {
         }
         photoRepository.saveAll(photos);
 
-        if (a.getPhotos() == null || a.getPhotos().isEmpty()) {
-            a.setCoverPhotoUrl(null);
+        if (album.getPhotos() == null || album.getPhotos().isEmpty()) {
+            album.setCoverPhotoUrl(null);
         }
 
         return count;
     }
 
-    /**
-     * 앨범 수정
-     */
+    // 5) 앨범 수정 / 삭제
     @Transactional
     public AlbumDetailResponse updateAlbum(Long userId, Long albumId, UpdateAlbumRequest req) {
-        Album a = albumRepository.findById(albumId)
+        Album album = albumRepository.findById(albumId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND, "ALBUM_NOT_FOUND"));
-        if (a.getUser() == null || !userId.equals(a.getUser().getId())) {
-            throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범에 접근할 권한이 없습니다.");
+
+        if (album.getUser() == null || !userId.equals(album.getUser().getId())) {
+            throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범을 수정할 권한이 없습니다.");
         }
 
-        if (req.getTitle() != null) a.setName(req.getTitle());
-        if (req.getDescription() != null) a.setDescription(req.getDescription());
+        if (req.getTitle() != null) album.setName(req.getTitle());
+        if (req.getDescription() != null) album.setDescription(req.getDescription());
 
-        return toDetail(a, "OWNER");
+        autoSetThumbnailIfMissing(album);
+        return toDetail(album, "OWNER");
     }
 
-    /**
-     * 앨범 삭제
-     */
     @Transactional
     public void deleteAlbum(Long userId, Long albumId) {
-        Album a = albumRepository.findById(albumId)
+        Album album = albumRepository.findById(albumId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND, "ALBUM_NOT_FOUND"));
-        if (a.getUser() == null || !userId.equals(a.getUser().getId())) {
+
+        if (album.getUser() == null || !userId.equals(album.getUser().getId())) {
             throw new ApiException(ErrorCode.FORBIDDEN, "해당 앨범을 삭제할 권한이 없습니다.");
         }
 
-        // ✅ 1) 앨범-사진 관계만 끊기 (사진 레코드는 그대로 유지)
-        if (a.getPhotos() != null && !a.getPhotos().isEmpty()) {
-            a.getPhotos().forEach(photo -> photo.setAlbum(null));
-            photoRepository.saveAll(a.getPhotos());
+        if (album.getPhotos() != null && !album.getPhotos().isEmpty()) {
+            album.getPhotos().forEach(photo -> photo.setAlbum(null));
+            photoRepository.saveAll(album.getPhotos());
         }
 
-        // ✅ 2) 그 다음 앨범만 삭제
-        albumRepository.delete(a);
+        albumRepository.delete(album);
     }
 
-    // ===== 썸네일 로직은 기존 그대로 =====
-
+    // 6) 썸네일 설정
     @Transactional
     public AlbumThumbnailResponse updateThumbnail(
             Long userId,
@@ -277,18 +286,18 @@ public class AlbumService {
 
         String thumbnailUrl;
 
-        // 1) 직접 업로드된 파일을 썸네일로 사용하는 경우
         if (file != null && !file.isEmpty()) {
             try {
-                String key = photoStorage.store(file);          // S3 Key
-                thumbnailUrl = toPublicUrl(key);               // /files/... 형태의 URL
+                String key = photoStorage.store(file);
+                thumbnailUrl = toPublicUrl(key);
             } catch (Exception e) {
-                throw new ApiException(ErrorCode.STORAGE_FAILED,
-                        "썸네일 파일 업로드 실패: " + e.getMessage(), e);
+                throw new ApiException(
+                        ErrorCode.STORAGE_FAILED,
+                        "썸네일 파일 업로드 실패: " + e.getMessage(),
+                        e
+                );
             }
-        }
-        // 2) 앨범 내 특정 사진을 썸네일로 지정
-        else if (photoId != null) {
+        } else if (photoId != null) {
             Photo photo = photoRepository.findById(photoId)
                     .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND, "PHOTO_NOT_FOUND"));
 
@@ -299,9 +308,7 @@ public class AlbumService {
             thumbnailUrl = (photo.getThumbnailUrl() != null && !photo.getThumbnailUrl().isBlank())
                     ? photo.getThumbnailUrl()
                     : photo.getImageUrl();
-        }
-        // 3) 아무것도 안 들어온 경우: 자동 선택 (앨범 내 첫 사진 or 최신 사진)
-        else {
+        } else {
             thumbnailUrl = pickAutoThumbnailUrl(album);
             if (thumbnailUrl == null) {
                 throw new ApiException(ErrorCode.NOT_FOUND, "PHOTO_NOT_FOUND");
@@ -317,24 +324,29 @@ public class AlbumService {
         );
     }
 
-    // ===== 즐겨찾기 관련 유틸 =====
-
-    /** OWNER 또는 공유 수락 멤버인지 확인 */
+    // 7) 즐겨찾기
     private boolean canAccessAlbum(Long userId, Album album) {
-        // OWNER
         if (album.getUser() != null && userId.equals(album.getUser().getId())) {
             return true;
         }
 
-        // 공유 멤버 (ACCEPTED + active)
         return albumShareRepository
                 .findByAlbumIdAndUserIdAndStatusAndActiveTrue(album.getId(), userId, Status.ACCEPTED)
                 .isPresent();
     }
 
-    /**
-     * 즐겨찾기 설정/해제 공통 메서드
-     */
+    private boolean canManagePhotos(Long userId, Album album) {
+        if (album.getUser() != null && userId.equals(album.getUser().getId())) {
+            return true;
+        }
+
+        return albumShareRepository
+                .findByAlbumIdAndUserIdAndStatusAndActiveTrue(album.getId(), userId, Status.ACCEPTED)
+                .map(AlbumShare::getRole)
+                .map(role -> role == AlbumShare.Role.EDITOR || role == AlbumShare.Role.CO_OWNER)
+                .orElse(false);
+    }
+
     @Transactional
     public AlbumFavoriteResponse setFavorite(Long userId, Long albumId, boolean favorite) {
         Album album = albumRepository.findById(albumId)
@@ -372,8 +384,7 @@ public class AlbumService {
         }
     }
 
-    // ===== 내부 유틸 =====
-
+    // 내부 유틸
     private String toPublicUrl(String key) {
         if (key == null) return null;
         if (key.startsWith("http://") || key.startsWith("https://")) {
@@ -401,49 +412,31 @@ public class AlbumService {
                 .orElse(null);
     }
 
-    private AlbumSummaryResponse toSummary(Album a, String role) {
-        String coverUrl = (a.getCoverPhotoUrl() != null && !a.getCoverPhotoUrl().isBlank())
-                ? a.getCoverPhotoUrl()
-                : pickAutoThumbnailUrl(a);
+    private AlbumDetailResponse toDetail(Album album, String role) {
+        List<AlbumDetailResponse.PhotoSummary> photoList =
+                (album.getPhotos() == null) ? List.of() :
+                        album.getPhotos().stream()
+                                .filter(p -> Boolean.FALSE.equals(p.getDeleted()))
+                                .map(p -> new AlbumDetailResponse.PhotoSummary(
+                                        p.getId(),
+                                        p.getImageUrl(),
+                                        p.getTakenAt(),
+                                        p.getLocation(),
+                                        p.getBrand()
+                                ))
+                                .toList();
 
-        int count = (a.getPhotos() == null) ? 0 : a.getPhotos().size();
-        return AlbumSummaryResponse.builder()
-                .albumId(a.getId())
-                .title(a.getName())
-                .coverPhotoUrl(coverUrl)
-                .photoCount(count)
-                .createdAt(a.getCreatedAt())
-                .role(role)
-                .build();
-    }
-
-    private AlbumDetailResponse toDetail(Album a, String role) {
-        List<Long> idList = (a.getPhotos() == null) ? List.of() :
-                a.getPhotos().stream()
-                        .map(Photo::getId)
-                        .collect(Collectors.toList());
-
-        List<PhotoResponseDto> list = (a.getPhotos() == null) ? List.of() :
-                a.getPhotos().stream()
-                        .map(PhotoResponseDto::new)
-                        .collect(Collectors.toList());
-
-        String coverUrl = (a.getCoverPhotoUrl() != null && !a.getCoverPhotoUrl().isBlank())
-                ? a.getCoverPhotoUrl()
-                : pickAutoThumbnailUrl(a);
-
-        int count = list.size();
+        int photoCount = photoList.size();
 
         return AlbumDetailResponse.builder()
-                .albumId(a.getId())
-                .title(a.getName())
-                .description(a.getDescription())
-                .coverPhotoUrl(coverUrl)
-                .photoCount(count)
-                .createdAt(a.getCreatedAt())
+                .albumId(album.getId())
+                .title(album.getName())
+                .description(album.getDescription())
+                .coverPhotoUrl(album.getCoverPhotoUrl())
+                .photoCount(photoCount)
+                .createdAt(album.getCreatedAt())
                 .role(role)
-                .photoIdList(idList)
-                .photoList(list)
+                .photoList(photoList)
                 .build();
     }
 }
